--- a/public/about/index.html
+++ b/public/about/index.html
@@ -229,6 +229,14 @@
 		<h2 class="font-bold text-xl mb-8">Recent Post</h2>
 
 		<article class="relative group flex flex-row">
+	<a class="insert-link" href="http://localhost:1313/posts/2025/git-and-github-introduction-guide/"></a>
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/github-cover-001_hu_c41dad65c60e2973.jpg" alt="Git与GitHub技术小白入门指南" width="250" height="141">
+
+	</figure>
+	<div class="basis-2/3 self-center ml-4">
+		<h3 class="font-bold group-hover:underline decoration-auto">Git与GitHub技术小白入门指南</h3>
+	</div>
+</article><article class="relative group flex flex-row">
 	<a class="insert-link" href="http://localhost:1313/posts/2025/hugo-quick-start-guide/"></a>
 	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/hugo-cover-001_hu_ff276b75f483844d.jpg" alt="Hugo静态网站快速入门指南" width="250" height="141">
 
@@ -259,14 +267,6 @@
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
 		<h3 class="font-bold group-hover:underline decoration-auto">Galactic Marvels: The Most Spectacular Nebulas in the Cosmos</h3>
-	</div>
-</article><article class="relative group flex flex-row">
-	<a class="insert-link" href="http://localhost:1313/posts/2023/stellar-spectacles/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/lionel-hesry-UNd3lRKhwSw-unsplash_hu_db76029ae80127b2.jpg" alt="Stellar Spectacles: The Wonders of Supernova Explosions" width="250" height="141">
-
-	</figure>
-	<div class="basis-2/3 self-center ml-4">
-		<h3 class="font-bold group-hover:underline decoration-auto">Stellar Spectacles: The Wonders of Supernova Explosions</h3>
 	</div>
 </article>
 		
